<resources>
    <string name="app_name" translatable="false">Scholar</string>

    <string name="settings">Settings</string>
    <string name="teachers">Teachers</string>
    <string name="stories">Stories</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="material_subjects">Material subjects</string>
    <string name="see_all">See all</string>
    <string name="stages">Stages</string>
    <string name="primary_stage">Primary Stage</string>
    <string name="medium_stage">Medium Stage</string>
    <string name="secondary_stage">Secondary Stage</string>
    <string name="some_subjects">Some subjects</string>
    <string name="find_your_teacher">Find your teacher</string>
    <string name="what_are_you_going_to_find">What are you going to find?</string>
    <string name="students_stories">Students Stories</string>
    <string name="student_name">Student name</string>
    <string name="menu">Menu</string>
    <string name="material">Material</string>
    <string name="materials">Materials</string>
    <string name="account">Account</string>
    <string name="change_lan">Change Language</string>
    <string name="favorites">Favorites</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>


    <string name="no_available_data">No available data</string>
    <string name="net_conn_err_title">Network connection error!</string>
    <string name="no_avail_data_err_title">No available data!</string>
    <string name="unknown_err_title">Unknown error!</string>
    <string name="net_conn_err_message">Please make sure that you are connected to network and try again.</string>
    <string name="no_avail_data_err_body">It seems like there are no data for now, coming soon.</string>
    <string name="unknown_err_body">An unknown error has occurred, please try again.</string>
    <string name="subjects">Subjects</string>
    <string name="personal">Personal</string>
    <string name="qualifications">Qualifications</string>
    <string name="stage_name">Stage name</string>
    <string name="class_name">class name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="create_new_account"><u>Create new Account</u></string>
    <string name="phone_number_or_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="password_field">Password edit text</string>
    <string name="have_account_yet">Have an account?</string>
    <string name="login_underline"><u>Login</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="material_details">Material details</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="purchase">Purchase</string>
    <string name="description">Description</string>
    <string name="syr">%d SYR</string>
    <string name="view">View</string>
    <string name="information">Information</string>
    <string name="reviews">Reviews</string>
    <string name="content">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.  The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="published_by">Published by</string>
    <string name="name">Name: </string>
    <string name="age">Age: </string>
    <string name="phone">Phone: </string>
    <string name="bio">Bio: </string>
    <string name="email">Email: </string>
    <string name="education">Education: </string>
    <string name="qualifications_label">Qualifications: </string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="enter_text">Enter text here</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="categories">Category: </string>
    <string name="stage">Stage: </string>
    <string name="select_category">select category</string>
    <string name="select_stage">select stage</string>
    <string name="enter_teacher_name">Enter teacher\'s name</string>
    <string name="add_story">Add Story</string>
    <string name="add_story_description">Do you have a story? Share with others.</string>
    <string name="title">Title</string>
    <string name="send">Send</string>
    <string name="purchase_credit">Purchase credit</string>
    <string name="wallet">Wallet: </string>
    <string name="class_room">Class: </string>
    <string name="subject">Subject: </string>
    <string name="select_class">Select class</string>
    <string name="select_subject">Select subject</string>
    <string name="guest">Guest</string>
    <string name="skip">Skip</string>
    <string name="enter_name_here">Enter full name here</string>
    <string name="enter_email_here">Enter email here</string>
    <string name="enter_phone_here">Enter phone here</string>
    <string name="contact_subject">Subject: </string>
    <string name="enter_description_here">Enter description here</string>


    <string name="empty_fields_left">Empty fields left</string>
    <string name="no_valid_email">No valid email</string>
    <string name="password_too_short">Password too short</string>
    <string name="passwords_not_match">Passwords not match</string>
    <string name="logout_successfully">Logout successfully</string>
    <string name="are_you_teacher">Are you a teacher? </string>
    <string name="contact_us">Contact us!</string>
    <string name="full_name">Full name</string>
    <string name="hi">Hi %s</string>
    <string name="welcome">Welcome to the Scholar app</string>
    <string name="hour">%d Hours</string>
    <string name="price_only">%d</string>

    <string name="material_class_name">%1$s, %2$s</string>
    <string name="loading">Loading…</string>
    <string name="amount">Amount</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_text">طلب شراء رصيد</string>
    <string name="add_link_payment">Upload Confirm payment image </string>
    <string name="enter_amount_here">for example 5000 SYR</string>
    <string name="description_optional">Description(optional)</string>
    <string name="empty_amount_left">Empty amount left</string>
    <string name="no_select_method">No select method</string>
    <string name="no_image_added">No confirm image added</string>
    <string name="please_sign_in">Please sign in first!</string>
    <string name="select_method">Select method</string>
    <string name="are_you_sure_to_purchase">Are you sure to purchase?</string>
    <string name="confirm">Confirm</string>
    <string name="purchase_confirm">Purchase confirm</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="apply">Apply</string>
    <string name="update">Update</string>
    <string name="enter_brith_here">tap to set brith date</string>
    <string name="ad_rate">Add Review</string>
    <string name="add">Add</string>

</resources>