<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RadioButton
        android:id="@+id/radioArabic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arabic" />

    <RadioButton
        android:id="@+id/radioEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english" />
    </RadioGroup>
    <Button
        android:id="@+id/btnApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply" />
</LinearLayout>
