<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/credit_text"
            android:textAppearance="@style/TextH5" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/amount"
            android:textAppearance="@style/TextBody1" />

        <EditText
            android:id="@+id/credit_amount_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:ems="10"
            android:hint="@string/enter_amount_here"
            android:inputType="number"
            android:textAppearance="@style/TextBody1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/payment_method"
            android:textAppearance="@style/TextBody1" />

        <Spinner
            android:id="@+id/credit_spinner_method"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description_optional"
            android:textAppearance="@style/TextBody1" />


        <EditText
            android:id="@+id/credit_description_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:gravity="top|start"
            android:hint="@string/enter_description_here"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="3"
            android:scrollbars="vertical"
            android:textAppearance="@style/TextBody1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_link_payment"
            android:textAppearance="@style/TextBody1"
            android:textStyle="normal"
            />

        <FrameLayout
            android:id="@+id/add_image_payment_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/add_image">

            <ImageView
                android:id="@+id/add_image_payment_imageview"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/add_image" />

            <ImageView
                android:id="@+id/add_image_payment_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"/>
        </FrameLayout>

        <ProgressBar
            android:id="@+id/credit_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/credit_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextBody2"
            android:textColor="?attr/colorError"
            android:visibility="gone" />

        <Button
            android:id="@+id/add_contact_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/button_background_color"
            android:padding="4dp"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            android:textSize="16sp"
            app:cornerRadius="16dp" />
    </LinearLayout>
</ScrollView>